--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
           BRANCH: brainfeaster.github.io/master
-          FOLDER: techpass
+          FOLDER: deploy_dist
