--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
           src_path: ./
           src_branch: proBuid
           dst_path: /techpass
-          dst_owner: sanjaipk
+          dst_owner: brainfeaster
           dst_repo_name: brainfeaster.github.io
           username: sanjaipk
