--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm run build
+        run: npm run build --prod --base-href /techpass/
       - name: Archive build
         if: success()
         uses: actions/upload-artifact@v1
