--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
+    "buildprod" :"ng build --prod --base-href /techpass/"
   },
   "private": true,
   "dependencies": {
