--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-    "buildprod" :"ng build --prod --base-href /techpass/"
+    "test": "ng test",
+    "buildprod":"ng build --prod --base-href /techpass/"
   },
   "private": true,
   "dependencies": {
